c4prj2_input/grade.txt
Grading at Thu Aug  1 13:21:48 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:24:35: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘n_cars’
       for (int j=0; j<fc->decks[i].n_cars;j++){
                                   ^
Compilation of future.c failed

Overall Grade: F
